[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/menu_buttons.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/menu.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/menu.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false

[node name="Main Menu" type="Node"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.5
margin_top = 54.0
margin_right = 135.5
margin_bottom = 117.0
theme = SubResource( 2 )
text = "Meister  Eliphas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = -123.0
margin_right = 154.0
margin_bottom = -31.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Control/MainButtons"]
margin_right = 125.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../Quit")
focus_next = NodePath("../Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Start"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="Control/MainButtons"]
margin_top = 62.0
margin_right = 125.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Quit"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Settings" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -31.0
margin_right = -19.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Settings"

[node name="SceneChanger" type="Node2D" parent="."]

[connection signal="pressed" from="Control/MainButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Control/MainButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="button_up" from="Control/Settings" to="." method="_on_Settings_button_up"]
